Ajout d'un champ à la fiche chercheur.
"Êtes-vous disposé à réaliser des expertises pour l'AUF?"

Demande #860

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -78,6 +78,9 @@
         {{ form.DELETE }}
     </fieldset>
     {% endfor %}
+    <table>
+        {% form_field forms.chercheur.expertises_auf %}
+    </table>
 </fieldset>
 
 <fieldset>
