--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -64,11 +64,11 @@
                 </div>
                 
                 <div class="sous-menu gauche">
-                    <a href="{% url savoirs.views.actualite_index %}" class="bout-droit">Actualités</a>
+                    <a href="{% url sitotheque.views.index %}" class="bout-droit">Sites</a>
                     <span>|</span>
                     <a href="{% url savoirs.views.evenement_index %}">Agenda</a>
                     <span>|</span>
-                    <a href="{% url sitotheque.views.index %}">Sites</a>
+                    <a href="{% url savoirs.views.actualite_index %}">Actualités</a>
                     <span>|</span>
                     <a href="{% url savoirs.views.ressource_index %}">Ressources</a>
                     <span>|</span>
