Changement du texte de présentation des ressources
Demande #845

--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -9,13 +9,13 @@
 
 <div class="texte">
     <p>
-    Le portail « Savoirs en partage » s'inscrit dans la continuité 
-    des différents projets de l'Agence universitaire de la Francophonie 
-    visant la mise en ligne de nombreux contenus scientifiques 
-    produits par ses implantations, ses directions, ses réseaux de chercheurs, 
-    en collaboration avec ses établissements membres : 
-    ouvrages, revues, articles, cours en ligne, sites web, etc. 
-    Ces contenus, dispersés, sont maintenant accessibles par une porte d'entrée unique.
+    Le portail « Savoirs en partage » s'inscrit dans la continuité des
+    différents projets de l'Agence universitaire de la Francophonie visant la
+    mise en ligne de nombreux contenus scientifiques produits par ses
+    implantations, ses directions, ses réseaux de chercheurs, en collaboration
+    avec ses établissements membres : ouvrages, revues, articles, cours en
+    ligne, etc. Un moissonneur OAI permet de regrouper ces contenus pour les
+    interroger simultanément.
     </p>
 </div>
 
