--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -18,20 +18,22 @@ LIGNES grises -> #e0e0e0 et #d5d5d5
 
 /* General */
 
-html {height:100%;}
-body { height:100%; font-size:62.5%; /* <- 1em equivaut 10px */ line-height:1.4; color:#3a3125; background:#fff url(../img/background-body.jpg) repeat-y 50% 0; font-family:Verdana, Arial, Sans-Serif; text-align:center;}
+html { height:100%; }
+body { height:100%; font-size: 85%; line-height:1.4; color:#3a3125; 
+       background:#fff url(../img/background-body.jpg) repeat-y 50% 0; 
+       font-family:Verdana, Arial, Sans-Serif; text-align:center; }
 a, a:active {text-decoration:underline;color:#97012c;}
 a:visited {color:#97012c;}
 a:hover {color:#97012c;}
 a img {border:none;}
 abbr, acronym {border-bottom:.1em dotted;cursor:help;}
 
-h1 {font-size:1em;margin:0 0 1em 0;}
-h2 {font-size:1em;margin:0 0 1em 0;}
-h3 {font-size:1em;margin:0 0 1em 0;}
-h4 {font-size:1em;margin:0 0 1em 0;}
-h5 {font-size:1em;margin:0 0 1em 0;}
-h6 {font-size:1em;margin:0 0 1em 0;}
+h1 {margin:0 0 1em 0;}
+h2 {margin:0 0 1em 0;}
+h3 {margin:0 0 1em 0;}
+h4 {margin:0 0 1em 0;}
+h5 {margin:0 0 1em 0;}
+h6 {margin:0 0 1em 0;}
 
 em{font-style:italic;}
 strong{font-weight:bold;}
@@ -52,13 +54,8 @@ form select { width:80%; overflow:hidden }
 form p { margin-bottom:2px }
 fieldset { clear:both; padding:10px; margin:0 0 0 0; position:relative }
 fieldset { border-color:#000000; border-width:1px 0 0 0; border-style:solid none none none; }
-fieldset { font-size:100%; }
 fieldset fieldset { border:1px solid #ccc; background:#fafafa; margin:10px; padding: 15px; }
-legend { font-size:150%; font-weight:bold; color:#000000; margin:0 0 0 0; padding:0 5px; }
-
-label {
-  font-size:12px;
-}
+legend { 120%; font-weight:bold; color:#000000; margin:0 0 0 0; padding:0 5px; }
 
 td, th { vertical-align:middle; padding: 5px }
 
@@ -70,8 +67,8 @@ td, th { vertical-align:middle; padding: 5px }
 #fond {padding:0; margin:0; display:block; position:relative; width:100%; height:auto !important; height:100%; min-height:100%; background:url(../img/background-fond.jpg) no-repeat 50% 0; text-align:left;}
 #enrobage {padding:0; margin:0 auto; display:block; position:relative; width:960px; height:auto !important; height:100%; min-height:100%;}
 
-div.sous-menu { display:inline; padding-top:1px; color:#fff; font-weight:bold; }
-div.sous-menu a { display:block; height:19px; padding:5px 10px 1px 10px; color:#fff; font-size:1.1em; text-decoration:none; float:right; white-space:nowrap; background-color:#4c4030;}
+div.sous-menu { display:inline; padding-top:1px; color:#fff; font-weight:bold; font-size: 80% }
+div.sous-menu a { display:block; height:19px; padding:5px 10px 1px 10px; color:#fff; text-decoration:none; float:right; white-space:nowrap; background-color:#4c4030;}
 div.sous-menu a:hover { text-decoration:underline;}
 div.sous-menu a.bout-gauche { background:#4c4030 url(../img/sous-menu-top-coin-gauche.gif) no-repeat 0 0; padding-right:5px;}
 div.sous-menu a.bout-droit {  background:#4c4030 url(../img/sous-menu-top-coin-droit.gif) no-repeat 100% 0; padding-left:5px;}
@@ -85,21 +82,21 @@ h1 a { display:block; width:144px; height:110px; text-indent:-99999px; backgroun
 h5 a { text-decoration:none; }
 
 #sep-recherche {}
-h2.slogan { position:absolute; top:53px; left:240px; font-size:3.4em; color:#3a3125; padding:0;font-family:"Myriad Pro", "Lucida Grande", sans-serif; font-weight:normal; letter-spacing:-1px; line-height:0.8em; z-index:1000; }
-h2.slogan span { display:block; margin:.7em 0 0; font-size:0.55em; color:#97012c; letter-spacing:normal; line-height:1.1;}
+h2.slogan { position:absolute; top:53px; left:240px; font-size: 250%; color:#3a3125; padding:0;font-family:"Myriad Pro", "Lucida Grande", sans-serif; font-weight:normal; letter-spacing:-1px; line-height:0.8em; z-index:1000; }
+h2.slogan span { display:block; margin:.7em 0 0; font-size: 55%; color:#97012c; letter-spacing:normal; line-height:1.1;}
 div.boite-recherche { z-index:1000; position:absolute; top:150px; left:240px; width:390px; height:90px; background:url(../img/recherche-background.gif) no-repeat 0 5px;}
-div.boite-recherche input { position:absolute; top:26px; left:10px; width:300px; height:16px; margin-top:10px; background:none; font-size:1.3em; border:none;}
+div.boite-recherche input { position:absolute; top:26px; left:10px; width:300px; height:16px; margin-top:10px; background:none; border:none;}
 div.boite-recherche button { position:absolute; top:22px; right:17px; width:45px; height:45px; background:url(../img/recherche-button.gif) no-repeat 0 0; color:#97012c; border:none;}
 div.boite-recherche button:hover { background:url(../img/recherche-button-over.gif) no-repeat 0 0; cursor:pointer;}
-div.boite-recherche h3 { font-size:2em; font-weight:normal; letter-spacing:-1px; margin:0;}
-div.boite-recherche h3 span { font-size:.6em; font-weight:normal; letter-spacing:normal;}
+div.boite-recherche h3 { font-size:150%; font-weight:normal; letter-spacing:-1px; margin:0;}
+div.boite-recherche h3 span { font-size:60%; font-weight:normal; letter-spacing:normal;}
 div.boite-recherche p { position:absolute; bottom:13px; left:0; color:#3a3125; margin:0; }
 div.boite-recherche p a { color:#3a3125;}
 div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
-#col-menu { clear:right; float:right; width:190px; margin:30px 20px 0px 0px; background:url(../img/col-droite-background.png) repeat-x top center; font-size:1.2em; line-height:1.2; }
+#col-menu { clear:right; float:right; width:190px; margin:30px 20px 0px 0px; background:url(../img/col-droite-background.png) repeat-x top center; font-size: 90%; line-height:1.2; }
 #col-menu img.bottom { margin-bottom:-7px; }
-#col-menu h4 { margin-bottom:0.4em; margin-left:25px; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
+#col-menu h4 { margin-bottom:0.4em; margin-left:25px; font-size:180%; font-weight:normal; letter-spacing:-1px; }
 #col-menu ul { margin:0 10px 0 25px; padding:0 }
 #col-menu li { margin:0; padding:0; }
 #col-menu a { display:block; margin-left:5px; padding:1px 5px; text-decoration:none; color:black; }
@@ -108,15 +105,12 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
 #tabs { margin-left:8px; margin-right:8px; }
 
-#contenu .zone-texte { font-size:1.2em; min-height:375px;}
+#contenu .zone-texte { min-height:375px;}
 #contenu .zone-texte ul li {list-style:disc; margin:0 0 .25em;}
 #contenu .zone-texte ol li {list-style:decimal; margin:0 0 .25em;}
 #contenu .zone-texte ul ul, #contenu .zone-texte ol ol {margin-top:.25em; margin-bottom:.25em;}
-#contenu .zone-texte h2 {font-size:1.2em;}
-#contenu .zone-texte h3 {font-size:1.1em;}
 #contenu .zone-texte blockquote {margin:0 2em 1em; font-style:italic;}
 
-#contenu .texte { font-size:1.2em; }
 #contenu .texte ul { padding-left: 3em; margin-bottom: 1em; }
 #contenu .texte ul li { list-style:disc; }
 #contenu .texte ol li { list-style:decimal; }
@@ -133,26 +127,25 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 ul a { text-decoration:none; }
 ul a:hover { text-decoration:underline; }
 
+.box { font-size: 90%; }
 ul.liste-de-l-accueil { padding:0 2.5em 0 0;}
 ul.liste-de-l-accueil li { margin:1em 0; padding-top:1.1em; border-top:2px solid #d5d5d5;}
 ul.liste-de-l-accueil img { float:left; margin:0 1em 5px 0; max-width:75px;}
 ul.liste-de-l-accueil span { display:block;}
-ul.liste-de-l-accueil .la-date { font-size:1.1em; }
 ul.liste-de-l-accueil a.la-date { color:black; }
-ul.liste-de-l-accueil .le-titre {display:block; font-size:1.2em; font-weight:bold; margin:.25em 0;}
-ul.liste-de-l-accueil .le-resume {font-size:1.1em;}
+ul.liste-de-l-accueil .le-titre { display:block; font-weight:bold; margin:.25em 0;}
 ul.liste-de-l-accueil .le-resume a { display:inline;}
 
 .resultats { width:744px; display:inline; margin:0; padding:0; float:left; margin-top:100px; margin-bottom:50px; margin-left:0; background:url(../img/contenu-bkg-middle.png) repeat-y 0 0;}
 .resultats a:hover{text-decoration:none;}
 .resultatRecherche {  padding:0 25px 1.5em;}
 .resultats .typeDocument { text-transform:uppercase;}
-.resultats .le-titre { font-size:1.2em; font-weight:bold; text-decoration:underline;}
-.resultats .resultatResume { font-size:1.1em; color:#000;}
-.resultats a.ligne-url { font-size:1.1em; text-decoration:none; }
+.resultats .le-titre { font-weight:bold; text-decoration:underline;}
+.resultats .resultatResume { color:#000;}
+.resultats a.ligne-url { text-decoration:none; }
 .resultats a:hover.ligne-url { text-decoration:underline;}
 
-.resultatPages { padding:0;margin-top:1.5em; text-align:center; font-size:1.2em;}
+.resultatPages { padding:0;margin-top:1.5em; text-align:center; }
 .resultatPages span { padding:0; margin:0 auto;}
 .resultatPages span a { text-decoration:underline; color:#3a3125; }
 .resultatPages span span { text-decoration:none; font-weight:bold; color:#3a3125;}
@@ -244,24 +237,23 @@ color:red;
 
 /* Contenu */
 
-#contenu h4 { margin-bottom: 4px; font-size: 220%; font-weight: normal; letter-spacing: -1px; }
+#contenu h4 { margin-bottom: 4px; font-size: 180%; font-weight: normal; letter-spacing: -1px; }
 #contenu h4 a { text-decoration:none; color:black; }
 #contenu h4 a:hover { text-decoration:underline; }
-#contenu h5 { margin-bottom: 4px; font-size: 180%; font-weight: normal; letter-spacing: -1px; }
+#contenu h5 { margin-bottom: 4px; font-size: 150%; font-weight: normal; letter-spacing: -1px; }
 #contenu h5 a { text-decoration:none; color:black; }
 #contenu h5 a:hover { text-decoration:underline; }
 
-#fiche_chercheur { font-size: 120%; }
-#fiche_chercheur h5 { font-size: 150%; border-color: #000000; border-width: 1px 0 0 0; 
+#fiche_chercheur h5 { border-color: #000000; border-width: 1px 0 0 0; 
                       border-style: solid none none none; margin-top: 20px; padding: 10px; }
 #fiche_chercheur .label { color: grey; font-weight: bold; width: 150px; }
 #fiche_chercheur .souligne { border-bottom: 1px solid #DDD; }
 
 /* Actions */
 
-.actions { float: right; text-align: right }
+.actions { font-size: 90%; float: right; text-align: right }
 .box .actions { float: none; text-align: left; margin-left: 0; list-style-type: none }
-.box .actions li { display: inline; padding-right: 10px; font-size: 110%; }
+.box .actions li { display: inline; padding-right: 10px; }
 
 /* Page d'accueil */
 
