--- a/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_ajout.html
@@ -2,6 +2,7 @@
 
 {% block extra-script %}
 {{ form.media.js }}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/agenda.js"></script>
 {% endblock %}
 
 {% block extra-style %}
