Changement de texte
Demande #784

--- a/auf_savoirs_en_partage/templates/savoirs/evenement_utilisation.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_utilisation.html
@@ -15,7 +15,9 @@
         <b>Autorisations :</b><br />
         <ul>
         <li>L'agenda est librement consultable par tous les visiteurs du site Savoirs en partage.</li>
-        <li>En revanche, seuls les chercheurs inscrits au répertoire peuvent ajouter des évènements et pourront ainsi proposer d'annoncer à la communauté universitaire francophone un événement  scientifique en remplissant en ligne une « fiche événement ».</li>
+        <li>Les chercheurs sont invités à annoncer à la communauté universitaire
+        francophone un évènement scientifique en remplissant en ligne une
+        «&nbsp;fiche évènement&nbsp;»</li>
         </ul>
     </p>
     <p>
