--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -243,6 +243,7 @@ color:red;
 #contenu h5 { margin-bottom: 4px; font-size: 150%; font-weight: normal; letter-spacing: -1px; }
 #contenu h5 a { text-decoration:none; color:black; }
 #contenu h5 a:hover { text-decoration:underline; }
+#contenu h5 a.action { color: #97012c; font-size: 60%; }
 
 #fiche_chercheur h5 { border-color: #000000; border-width: 1px 0 0 0; 
                       border-style: solid none none none; margin-top: 20px; padding: 10px; }
