--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -49,7 +49,7 @@ form td, form th { vertical-align:top }
 form th { width:20em; text-align:left; font-weight:bold }
 form table { width:100% }
 form input[type=text] { width:20em }
-form input.date { width:auto }
+form input.date, form input.time { width: 8em; }
 form select { width:80%; overflow:hidden }
 form p { margin-bottom:2px }
 fieldset { clear:both; padding:10px; margin:0 0 0 0; position:relative }
