--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -23,14 +23,8 @@
     <legend>Etablissement de rattachement <span style="color:red">*</span></legend>
     <table>
         {% form_field forms.chercheur.etablissement %}
+        {% form_field forms.chercheur.pays_etablissement %}
     </table>
-    <div id="etablissement_autre">
-        <p>Si l'établissement n'existe pas dans la liste des établissements membres de l'AUF, ci-dessus</p>
-        <table>
-            {% form_field forms.chercheur.etablissement_autre_nom %}
-            {% form_field forms.chercheur.etablissement_autre_pays %}
-        </table>
-    </div>
 </fieldset>
 
 <fieldset>
