--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -94,7 +94,7 @@
                     </h2>
 
                     <div class="boite-recherche">
-                        <h3>Recherche</h3>
+                        <h3>Recherche <span>dans toutes les rubriques</span></h3>
 
                         <form name="fRecherche" id="fRecherche" action="{% sep_url savoirs.views.recherche %}" method="get">
                             <input name="q" id="recherche" type="text" value="{{ q|default:"" }}" />
